# McpHomeAssistant

./: .env.example  .env.raspberry_pi  .gitignore  COMPLIANCE_CHECK.md  CORRECTIFS_MIGRATION.md  LICENSE  PHASE_3_4_README.md  README.md  ROADMAP.md  VALIDATION_FINALE.md  auth_manager.py  bridge_data.db  bridge_server.py  database.py  deploy_auth_fixes.ps1  deploy_auth_fixes.sh  ha_config_manager.py  http_server.py  install.sh  permissions_manager.py  permissions_middleware.py  pyproject.toml  requirements-bridge.txt  requirements.txt  start_server.py  start_web_server.py  test_auth_fixed.py  test_bridge.py  test_database.py  test_fix_auth.py  test_ha_config.py  test_permissions.py  test_permissions_simple.py  test_simple.py
configs/: LM_STUDIO_SETUP.md  api-token-beroute.txt  lm-studio-bridge-config.json  lm-studio-config-with-api-token.json  lm-studio-functions-ready.json  lm-studio-functions.json  lm-studio-quick-setup.md  lm-studio-system-prompt.md  mcp-config-fixed.json
copilot/: copilot-instructions.md
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  BRIDGE_ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  HTTP_SERVER_README.md  INSTALL_IMPROVEMENTS.md  LM_STUDIO_API_TOKENS_GUIDE.md  LM_STUDIO_CONFIG.md  MIGRATION_PI.md  PHASE_3_4_SUMMARY.md  QUICKSTART.md  QUICK_INSTALL_RPI.md  QUICK_MIGRATION.md  RASPBERRY_PI_INSTALL.md  README.md
examples/: README.md  claude_desktop_config.json  cline_config.json  continue_config.json  cursor_config.json  lm_studio_config.json  openwebui_config.yaml  smart_plug_automations.py
scripts/: README.md  README_TRANSFER.md  (+29 more)
(+53 files in other folders)
